@@ -10,6 +10,7 @@ Changelog:
     Language updates:
         - Updated Chinese Traditional translation (thanks, mcc!)
     Changed audio/subtitle defaults to accept anything
+    Fixed possible error while loading iPhoto library (#1523)
 
 1.70.1 - 2012-08-31
 
